yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb
  labels:
    app: nginx-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-lb
  template:
    metadata:
      labels:
        app: nginx-lb
    spec:
      containers:
        - name: nginx-lb
          image: "default-route-openshift-image-registry.apps.sandbox-m2.ll9k.p1.openshiftapps.com/kirom-hadiyanto-dev/nginx-lb:latest"
          # image: "nginx-lb:latest"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          stdin: true
          serviceAccount: default
          magePullPolicy: "Always"
          # env: 
            # - name: "MONGO_INITDB_ROOT_USERNAME"
              # value: "mongodb"
            # - name: "MONGO_INITDB_ROOT_PASSWORD"
              # value: "mongodb"
          ports: 
            - containerPort: 80
              name: "tcp-80"
          # volumeMounts: 
            # - name: "mongodb-persistent-storage"
              # mountPath: "/data/db"
      # volumes: 
          # - name: "mongodb-persistent-storage"
            # persistentVolumeClaim: 
              # claimName: "mongodb-pvc"
      # terminationGracePeriodSeconds: 5
