yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - name: tcp-8090
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
